Fix for missing filter button on iphone

--- a/front-gateway/src/components/Search/style/filter.scss
+++ b/front-gateway/src/components/Search/style/filter.scss
@@ -161,128 +161,4 @@
 // }
 
 // nouislider overrides
-.cost-slider {
-  .noUi-connect {
-    background-color: $brand-primary !important;
-  }
 
-  .noUi-value {
-    font-size: 12px;
-  }
-
-  .noUi-value-large {
-    color: $brand-primary;
-    font-size: 15px;
-
-    &::before {
-      color: $gray-light;
-      content: "₪";
-      font-size: 12px;
-    }
-
-    &:last-child::after {
-      color: $brand-success;
-      content: "+";
-    }
-  }
-}
-
-.roomsnum-slider {
-  .noUi-connect {
-    background-color: lighten($brand-primary, 20%) !important;
-  }
-
-  .noUi-value-large {
-    color: $brand-primary;
-    font-size: 16px;
-
-    &:last-child::after {
-      color: $brand-success;
-      content: "+";
-    }
-  }
-}
-
-.size-slider {
-  .noUi-connect {
-    background-color: lighten($brand-primary, 40%) !important;
-  }
-
-  .noUi-value-large {
-    color: $brand-primary;
-    font-size: 12px;
-
-    &:last-child {
-      font-size: 16px;
-
-      &::after {
-        color: $brand-success;
-        content: "+";
-      }
-    }
-
-    &:nth-child(2) {
-      font-size: 16px;
-
-      &::after {
-        color: $gray-light;
-        font-size: 12px;
-      }
-    }
-  }
-}
-
-.noUi-target * {
-  direction: ltr;
-}
-
-.noUi-target {
-  height: 8px;
-}
-
-.noUi-value {
-  width: 70px !important;
-}
-
-.noUi-value-horizontal {
-  margin-left: -35px !important;
-}
-
-.noUi-marker {
-  width: 1px !important;
-}
-
-.noUi-handle {
-  background-color: $brand-white !important;
-  border: 1px solid lighten($gray-light, 30%) !important;
-  border-radius: 50% !important;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1) !important;
-  cursor: pointer !important;
-  height: 19.6px !important;
-  left: -10px !important;
-  top: -9px !important;
-  width: 19.6px !important;
-
-  &:hover {
-    cursor: hand !important;
-  }
-
-  &::before {
-    display: none !important;
-  }
-
-  &::after {
-    display: none !important;
-  }
-}
-
-.cost-slider,
-.roomsnum-slider,
-.size-slider {
-  > div {
-    position: relative;
-    height: 4px;
-    margin: 0 auto;
-    margin-bottom: 80px;
-  }
-}
